# autoenv

./: .gitignore  .gitmodules  README.md  config.toml  evaluate.sh  feedback.py  program.md  pyproject.toml  setup.sh  spec.md  train.toml
candidate/: README.md  pyproject.toml
candidate/.prime/: .env-metadata.json
candidate/candidate_env/: __init__.py  data_gen.py  env.py  faults.py  scoring.py  tools.py  world.py
