[project]
name = "candidate-env"
version = "0.1.0"
description = "AutoEnv candidate environment — agent iterates on this"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.9",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["candidate_env"]
