[project]
name = "candidate-env"
version = "0.1.0"
description = "On-call engineer RL environment — diagnose and remediate infrastructure incidents"
requires-python = ">=3.11"
tags = ["rl", "tool-use", "oncall", "incident-response"]
dependencies = [
    "verifiers>=0.1.9",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["candidate_env"]
