[project]
name = "candidate-env"
version = "0.1.0"
description = "Your environment description here"
requires-python = ">=3.11"
tags = ["rl"]
dependencies = [
    "verifiers>=0.1.9",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["candidate_env"]
